@@ -49,9 +49,9 @@ public class LanguageService {
 	public Locale getDefault() {
 		return Locale.ENGLISH;
 	}
-
+	//todo change it for Jdk19
 	public Locale[] getAvailableLocale() {
-		return new Locale[] { Locale.ENGLISH, Locale.FRENCH, Locale.JAPANESE, Locale.of("pt", "br"), Locale.of("nl", "be")};
+		return new Locale[] { Locale.ENGLISH, Locale.FRENCH, Locale.JAPANESE, new Locale("pt", "br"), new Locale("nl", "be")};
 	}
 
 	public void changeLocal(Locale l) {
